2006-10-19  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-scan.c: (loopdir):
	
	BUGZILLA: #351987 - Baobab hangs on directories with wrong
	premissions 

2006-10-14  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab.[ch]:
	* src/baobab-utils.[ch]:
	* src/gedit-spinner.[ch]:

	Update to the latest version of the spinner and misc related
	cleanups and fixes.

2006-10-11  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-treeview.c: (create_directory_treeview):

	BUGZILLA: #355187 - Graphical usage bar does not scale
	Made usage column not-resizable.

2006-10-04  Fabio Marzocca  <thesaltydog@gmail.com>

	* AUTHORS:
	* src/callbacks.c: (on_about_activate):

	Updating authors

2006-10-02  Alejandro G. Castro  <acastro@igalia.com>

	* data/baobab.glade: Added the GtkPaned and the GtkScrolledWindow
	to the new main window in order to integrate the ringschart
	widget.
	* src/baobab-ringschart.[ch]: New widget representing a ringschart
	that is used in the main window to represent the size of
	directories. 
	* src/Makefile.am: Added the new widget to the sources list.
	* src/baobab-treeview.c: 
	(create_directory_treeview): Selection changed signal connected to
	a new callback that synchronizes the status of the treeview with
	the ringschart.
	* src/baobab.c: 
	(set_busy): Added the control of the ringschart widget when the
	scanning process starts and finishes, we can't draw the ringschart
	when the treemodel is being scanned.
	(initialize_ringschart): Added this function, it creates and
	initializes the ringschart.
	(main): Called the initialize_ringschart function.
	* src/baobab.h: Added the new attribute to the application
	structure. 
	* src/callbacks.c: 
	(on_tv_selection_changed): 
	(on_rchart_sector_activated): this two callbacks synchronize the
	treeview and the ringschart of the main window, when the user
	clicks in a row in the treeview that sector is selected in the
	ringschart.